# diffusion_pusht

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: deploy_site.yml
docs/: index.md  setup.md
docs/experiments/: evaluation.md  results.md  setup.md  training.md
docs/logs/: index.md
docs/logs/posts/: day_1.md  day_2.md  day_3.md  day_4.md  day_5.md  day_6.md  project_start.md
experiments/evaluation/: index.html
experiments/training/: index.html
logs/: index.html
logs/2025/08/05/project-start/: index.html
logs/2025/08/06/day-1/: index.html
logs/2025/08/07/day-2/: index.html
logs/2025/08/08/day-3/: index.html
logs/2025/08/11/day-4/: index.html
logs/2025/08/12/day-5/: index.html
logs/2025/08/13/day-6/: index.html
logs/archive/2025/: index.html
notebooks/: data_analysis.ipynb
patches/: 0001-Patch-to-allow-import-bug-fixes.patch  0002-Return-coverage-instead-of-reward.-Only-for-evaluati.patch
scripts/: eval.py  eval.sh  train_img_cnn_v1.sh  train_img_cnn_v2.sh  train_lowdim_cnn_v1.sh  train_lowdim_cnn_v2.sh  train_lowdim_transformer_v1.sh  train_lowdim_transformer_v2.sh  training_curve.ipynb
search/: search_index.json
setup/: index.html
