[project]
name = "diffusion-pusht"
version = "0.1.0"
description = "Train and evaluate a diffusion policy on the PushT task."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gym-pusht>=0.1.5",
    "lerobot>=0.3.2",
    "torch>=2.7.1",
    "zarr>=3.1.1",
]

[tool.ruff]
line-length = 120
